<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cadastrocaelum.ListaAlunosActivity">

    <item 
        android:id="@+id/menu_novo"
		app:showAsAction="always"
        android:icon="@drawable/ic_novo"
        android:title="@string/form_action_bar_new"
        />
    
    <item 
        android:id="@+id/menu_mapa"
		app:showAsAction="always"
        android:icon="@drawable/ic_mapa"
        android:title="@string/form_action_bar_map"
        />
    <item 
        android:id="@+id/menu_opcoes"
        app:showAsAction="always"
        android:title="@string/form_action_bar_options"
        android:icon="@drawable/ic_opcoes">
        <menu>
            <item 
		        android:id="@+id/menu_enviar_provas"
		        app:showAsAction="always"
		        android:icon="@drawable/ic_enviar"
		        android:title="@string/form_action_bar_send"
		        />
            <item 
		        android:id="@+id/menu_receber_provas"
		        app:showAsAction="always"
		        android:icon="@drawable/ic_receber"
		        android:title="@string/form_action_bar_receive"
		        />
		    <item 
		        android:id="@+id/menu_preferencias"
		        app:showAsAction="always"
		        android:icon="@drawable/ic_preferencias"
		        android:title="@string/form_action_bar_pref"
		        />
        </menu>
    </item>

</menu>
