<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    tools:context="com.example.cadastrocaelum.FormularioActivity" >
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_no_image"
	        android:contentDescription="@string/app_name"
	        android:layout_gravity="center_horizontal" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/form_label_name" />
	
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/form_label_phone" />
	
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="phone" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/form_label_address" />
	
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/form_label_site" />
	
	    <EditText
	        android:inputType="text"
	        android:id="@+id/editText4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/form_label_grade" />
	
	    <SeekBar
	        android:id="@+id/seekBar1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <Button
	        android:id="@+id/buttonSave"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/form_button_save" />
	    
	    <Button
	        android:id="@+id/buttonClearFields"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/form_button_clear" />
	
	</LinearLayout>
</ScrollView>
