<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borda" >
    
	<TableRow>
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="25sp"
	        android:text="@string/detalhe_prova_titulo"/>
	</TableRow>
	
	<TableRow>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/detalhe_prova_titulo_materia"/>
	    
	    <TextView 
	        android:id="@+id/detalhe_prova_materia"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	</TableRow>
	
	<TableRow>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/detalhe_prova_titulo_data"/>
	    
	    <TextView 
	        android:id="@+id/detalhe_prova_data"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	</TableRow>
	
	<TableRow>
	   <ListView 
	        android:id="@+id/detalhe_prova_topicos"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />
	</TableRow>
	
</TableLayout>
